Fixed contrast ration

--- a/styles.css
+++ b/styles.css
@@ -109,7 +109,7 @@ body {
 
 footer {
   font-size: 12px;
-  color: #2a75bb;
+  color: #1D5586;
   text-align: center;
   padding-bottom: 20px;
 }
